plugins {
    id 'java'
    id 'application'
}

group = 'com.anand'
version = '1.0.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.spark:spark-core_2.12:3.5.6'
    implementation 'org.apache.spark:spark-sql_2.12:3.5.6'

    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.18'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.13.4'
    // Required for Gradle 8.x + JUnit 5 tests to run reliably
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// These are the exact JVM arguments required by Apache Spark to run on Java 17+
def sparkJvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED',
        '--add-opens=java.base/java.net=ALL-UNNAMED',
        '--add-opens=java.base/java.nio=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
        '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens=java.base/sun.nio.cs=ALL-UNNAMED',
        '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
        '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
        '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
]

application {
    mainClass = 'com.anand.retail.main.OrderBronzeJob'
    // Apply the JVM args when we run the app
    applicationDefaultJvmArgs = sparkJvmArgs
}

test {
    useJUnitPlatform()
    // Give Spark enough memory to initialize in tests
    maxHeapSize = "2G"
    // Apply the JVM args when running tests
    jvmArgs(sparkJvmArgs)
}

run {

    jvmArgs(sparkJvmArgs)

}